--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0"
+    "@11ty/eleventy": "^3.0.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-jinja-template": "^2.1.0"
   },
   "dependencies": {
     "a-sync-waterfall": "^1.0.1",
