--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "finalhandler": "^1.3.1",
     "foreground-child": "^3.3.1",
     "fresh": "^2.0.0",
+    "fuse.js": "^7.1.0",
     "glob": "^10.4.5",
     "glob-parent": "^5.1.2",
     "graceful-fs": "^4.2.11",
