--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-plugin-rss": "^2.0.3",
     "@parcel/transformer-sass": "^2.14.4",
     "concurrently": "^9.1.2",
     "parcel": "^2.14.4",
