--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"**/*.{js,css,html,njk,md}\" || true"
   },
   "dependencies": {
+    "@quasibit/eleventy-plugin-sitemap": "^2.2.0",
     "fuse.js": "^7.1.0",
     "luxon": "^3.6.1",
     "slugify": "^1.6.6"
