--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@quasibit/eleventy-plugin-sitemap": "^2.2.0",
+    "@swup/fade-theme": "^2.0.1",
     "fuse.js": "^7.1.0",
     "luxon": "^3.6.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "swup": "^4.8.2"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
